@@ -31,6 +31,8 @@ Backwards Incompatibilities
 Bug Handling
 ------------
 
+* Fix the shutdown hang caused by a Filter/Output plugin failure (#1324).
+
 * Fix the RPM dependency errors on Centos7 (#1311).
 
 * Don't output empty messages when use_framing = true (#1326).
